# GoogleSpeechToText

./: CMakeLists.txt  README.md
include/: googlespeechtotext.h
src/: googlespeechtotext.cpp
